# electrolysis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  ROADMAP.md
.github/workflows/: release.yml
src/: config.rs  error.rs  logger.rs  main.rs  mapper.rs  merge_driver.rs  parser.rs  pipeline.rs  sanitizer.rs  scheme_updater.rs  sorter.rs  uniquifier.rs
tests/: integration_test.rs
