[package]
name = "electrolysis"
version = "0.1.0"
edition = "2021"
description = "Production-ready pbxproj sanitizer, uniquifier, and sorter"
license = "Apache-2.0"

[[bin]]
name = "electrolysis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
md5 = "0.7"
thiserror = "1"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
colored = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
